ADD batch tokenization

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -10,7 +10,10 @@
      "output_type": "stream",
      "text": [
       "e:\\Development\\VSCODE\\University\\PLH\\word-embeddings\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Drashby\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
@@ -34,9 +37,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset in ./data/raw_cat_gc_250mb.pkl already exists.\n"
+     ]
+    }
+   ],
    "source": [
-    "vectorizer.load_data(size_mb=100)"
+    "vectorizer.load_data(size_mb=500)"
    ]
   },
   {
@@ -48,30 +59,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokenized texts in file ./data/spacy_cat_gc_100mb.pkl already exist.\n"
+      "CUDA GPU available. Using spacy with CUDA.\n",
+      "Tokenized 118000/117732 texts with spacy.\r"
      ]
     }
    ],
    "source": [
-    "vectorizer.tokenize(tokenizer='spacy', caps=False)"
+    "vectorizer.tokenize(tokenizer='spacy', caps=False, batch_size=500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "117732\n",
+      "5\n",
+      "Training word2vec model with skipgram...\n"
+     ]
+    }
+   ],
    "source": [
     "model: Word2Vec | FastText = vectorizer.train(vectorizer='word2vec', model_type='skipgram', vector_size=100, workers=16, save=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tonta', 0.7739361524581909),\n",
+       " ('maquillada', 0.7718512415885925),\n",
+       " ('guarra', 0.767608106136322),\n",
+       " ('tranquila', 0.7667609453201294),\n",
+       " ('presumida', 0.7642133831977844),\n",
+       " ('terribes', 0.7586987018585205),\n",
+       " ('porca', 0.7568697929382324),\n",
+       " ('amargada', 0.7553926110267639),\n",
+       " ('espavilada', 0.7547579407691956),\n",
+       " ('baixeta', 0.7499359250068665)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.vw.most_similar('dog', topn=10)"
+    "model.wv.most_similar('guapa', topn=10)"
    ]
   }
  ],
