ADD evaluation cell

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -42,12 +42,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset in ./data/raw_cat_gc_250mb.pkl already exists.\n"
+      "Dataset in ./data/raw_cat_gc_maxmb.pkl already exists.\n"
      ]
     }
    ],
    "source": [
-    "vectorizer.load_data(size_mb=500)"
+    "vectorizer.load_data(size_mb='max')"
    ]
   },
   {
@@ -59,13 +59,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA GPU available. Using spacy with CUDA.\n",
-      "Tokenized 118000/117732 texts with spacy.\r"
+      "Tokenized texts in file ./data/nltk_cat_gc_maxmb.pkl already exist.\n"
      ]
     }
    ],
    "source": [
-    "vectorizer.tokenize(tokenizer='spacy', caps=False, batch_size=500)"
+    "vectorizer.tokenize(tokenizer='nltk', caps=False, batch_size=500)"
    ]
   },
   {
@@ -77,10 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'list'>\n",
-      "117732\n",
-      "5\n",
-      "Training word2vec model with skipgram...\n"
+      "Model in ./models/word2vec/w2v_sg_100_nltk_cat_gc_maxmb.model already exists. Loaded model.\n"
      ]
     }
    ],
@@ -96,16 +92,16 @@
     {
      "data": {
       "text/plain": [
-       "[('tonta', 0.7739361524581909),\n",
-       " ('maquillada', 0.7718512415885925),\n",
-       " ('guarra', 0.767608106136322),\n",
-       " ('tranquila', 0.7667609453201294),\n",
-       " ('presumida', 0.7642133831977844),\n",
-       " ('terribes', 0.7586987018585205),\n",
-       " ('porca', 0.7568697929382324),\n",
-       " ('amargada', 0.7553926110267639),\n",
-       " ('espavilada', 0.7547579407691956),\n",
-       " ('baixeta', 0.7499359250068665)]"
+       "[('sexi', 0.7591359615325928),\n",
+       " ('eixerida', 0.73984694480896),\n",
+       " ('presumida', 0.7394480109214783),\n",
+       " ('baixeta', 0.7344704866409302),\n",
+       " ('lletja', 0.7339998483657837),\n",
+       " ('guai', 0.7312346696853638),\n",
+       " ('grassoneta', 0.7271562218666077),\n",
+       " ('maca', 0.7265952825546265),\n",
+       " ('guapíssima', 0.7262324094772339),\n",
+       " ('guarra', 0.725433886051178)]"
       ]
      },
      "execution_count": 6,
@@ -115,6 +111,30 @@
    ],
    "source": [
     "model.wv.most_similar('guapa', topn=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(PearsonRResult(statistic=0.49414437543712003, pvalue=6.0274824166184415e-15),\n",
+       " SignificanceResult(statistic=0.5243350573226853, pvalue=6.153711761765849e-17),\n",
+       " 0.4524886877828055)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the model\n",
+    "metrics = model.wv.evaluate_word_pairs('./data/wordsim353.en.ca.txt', encoding='utf-8')\n",
+    "metrics"
    ]
   }
  ],
