ADD evaluation results

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -18,8 +18,7 @@
     }
    ],
    "source": [
-    "from gensim.models import Word2Vec\n",
-    "from gensim.models import FastText\n",
+    "from gensim.models import Word2Vec, FastText\n",
     "\n",
     "from word_vectorizer import WordVectorizer"
    ]
@@ -42,12 +41,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset in ./data/raw_cat_gc_maxmb.pkl already exists.\n"
+      "Dataset in ./data/raw_cat_gc_1000mb.pkl already exists.\n"
      ]
     }
    ],
    "source": [
-    "vectorizer.load_data(size_mb='max')"
+    "vectorizer.load_data(size_mb=1000)"
    ]
   },
   {
@@ -59,12 +58,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokenized texts in file ./data/nltk_cat_gc_maxmb.pkl already exist.\n"
+      "CUDA GPU available. Using spacy with CUDA.\n",
+      "Tokenized 420500/420088 texts with spacy.\r"
      ]
     }
    ],
    "source": [
-    "vectorizer.tokenize(tokenizer='nltk', caps=False, batch_size=500)"
+    "vectorizer.tokenize(tokenizer='spacy', caps=False, batch_size=500)"
    ]
   },
   {
@@ -76,7 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model in ./models/word2vec/w2v_sg_100_nltk_cat_gc_maxmb.model already exists. Loaded model.\n"
+      "Loading tokenized texts from ./data/spacy_cat_gc_1000mb.pkl...\n",
+      "Training word2vec model with skipgram...\n"
      ]
     }
    ],
@@ -92,16 +93,16 @@
     {
      "data": {
       "text/plain": [
-       "[('sexi', 0.7591359615325928),\n",
-       " ('eixerida', 0.73984694480896),\n",
-       " ('presumida', 0.7394480109214783),\n",
-       " ('baixeta', 0.7344704866409302),\n",
-       " ('lletja', 0.7339998483657837),\n",
-       " ('guai', 0.7312346696853638),\n",
-       " ('grassoneta', 0.7271562218666077),\n",
-       " ('maca', 0.7265952825546265),\n",
-       " ('guapíssima', 0.7262324094772339),\n",
-       " ('guarra', 0.725433886051178)]"
+       "[('presumida', 0.756813645362854),\n",
+       " ('eixerida', 0.7546934485435486),\n",
+       " ('maca', 0.7537257671356201),\n",
+       " ('lletja', 0.747908890247345),\n",
+       " ('bombera', 0.740748405456543),\n",
+       " ('guarra', 0.7309250831604004),\n",
+       " ('sexi', 0.7291626334190369),\n",
+       " ('anorèxica', 0.7274548411369324),\n",
+       " ('guapo', 0.7272195219993591),\n",
+       " ('maquillada', 0.7254548072814941)]"
       ]
      },
      "execution_count": 6,
@@ -121,9 +122,9 @@
     {
      "data": {
       "text/plain": [
-       "(PearsonRResult(statistic=0.49414437543712003, pvalue=6.0274824166184415e-15),\n",
-       " SignificanceResult(statistic=0.5243350573226853, pvalue=6.153711761765849e-17),\n",
-       " 0.4524886877828055)"
+       "(PearsonRResult(statistic=0.5314063332433877, pvalue=2.751945461367886e-17),\n",
+       " SignificanceResult(statistic=0.5576091637094459, pvalue=3.282086434342122e-19),\n",
+       " 1.3574660633484164)"
       ]
      },
      "execution_count": 7,
