MOD plots ADD spearman and results

--- a/plot_textsim.ipynb
+++ b/plot_textsim.ipynb
@@ -76,7 +76,7 @@
     "plt.title(\"Mean Scores for Each Model\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.xlabel(\"Model\")\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(rotation=30)\n",
     "plt.legend(title=\"Scores\")\n",
     "plt.show()\n",
     "\n",
@@ -88,7 +88,7 @@
     "plt.title(\"Validation Scores for Each Model\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.xlabel(\"Model\")\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(rotation=30)\n",
     "plt.legend(title=\"Scores\")\n",
     "plt.show()\n",
     "\n",
@@ -99,7 +99,7 @@
     "plt.title(\"Best Scores for Each Model\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.xlabel(\"Model\")\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(rotation=30)\n",
     "plt.legend(title=\"Scores\")\n",
     "plt.show()\n",
     "\n",
@@ -112,7 +112,7 @@
     "plt.suptitle('')\n",
     "plt.xlabel(\"Model\")\n",
     "plt.ylabel(\"Score\")\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(rotation=30)\n",
     "plt.show()\n",
     "\n",
     "# Scores for each execution model\n",
@@ -121,10 +121,27 @@
     "plt.title(\"Mean Scores for Each Tensorflow Model\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.xlabel(\"Model\")\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(rotation=30)\n",
     "plt.legend(title=\"Scores\")\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_scores = df.groupby(\"Model\")[[\"Train spearman\", \"Val spearman\", \"Test spearman\"]].max()\n",
+    "max_scores = max_scores.sort_values(ascending=False, by=\"Test pearson\")\n",
+    "max_scores.plot(kind=\"bar\", figsize=(12, 6))\n",
+    "plt.title(\"Best Scores for Each Model\")\n",
+    "plt.ylabel(\"Score\")\n",
+    "plt.xlabel(\"Model\")\n",
+    "plt.xticks(rotation=30)\n",
+    "plt.legend(title=\"Scores\")\n",
+    "plt.show()"
    ]
   },
   {
