--- a/testing_textsim_class.ipynb
+++ b/testing_textsim_class.ipynb
@@ -398,7 +398,147 @@
       "Tensorflow model 1/8 done\n",
       "Tensorflow model 2/8 done\n",
       "Tensorflow model 3/8 done\n",
-      "Tensorflow model 4/8 done\n"
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "13 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "14 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "15 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "16 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "17 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "18 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "19 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "20 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "21 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "22 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "23 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "24 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "25 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "26 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "27 models done of a total of 28\n",
+      "Tensorflow model 1/8 done\n",
+      "Tensorflow model 2/8 done\n",
+      "Tensorflow model 3/8 done\n",
+      "Tensorflow model 4/8 done\n",
+      "Tensorflow model 5/8 done\n",
+      "Tensorflow model 6/8 done\n",
+      "Tensorflow model 7/8 done\n",
+      "Tensorflow model 8/8 done\n",
+      "28 models done of a total of 28\n"
      ]
     }
    ],
@@ -452,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -906,16 +1046,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import pearsonr"
+    "from scipy.stats import pearsonr, spearmanr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_spearman(input, y):\n",
+    "    # Obtener las predicciones del modelo para los datos de prueba. En este ejemplo vamos a utilizar el corpus de training.\n",
+    "    predictions = pipe(prepare(input), add_special_tokens=False)\n",
+    "\n",
+    "    for prediction in predictions:\n",
+    "        prediction['score'] = logit(prediction['score'])\n",
+    "\n",
+    "    y_pred = np.array([pred['score']for pred in predictions])\n",
+    "    # Calcular la correlación de Spearman entre las predicciones y los datos de prueba\n",
+    "    correlation, _ = spearmanr(y_pred.flatten(), np.array(y).flatten())\n",
+    "    return correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1189,35 @@
     }
    ],
    "source": [
-    "print(train_pearson, test_val, test_pearson)"
+    "print(train_pearson, val_pearson, test_pearson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_spearman = compute_spearman(input_pairs, y_train)\n",
+    "val_spearman = compute_spearman(input_pairs_val, y_val)\n",
+    "test_spearman = compute_spearman(input_pairs_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9614333116067086 0.7319414248170184 0.7993360636317496\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_spearman, val_spearman, test_spearman)"
    ]
   }
  ],
