--- a/testing_textsim_class.ipynb
+++ b/testing_textsim_class.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Usuario\\Documents\\Universitat\\4rt Quatri\\PLH\\Practica4\\word-embeddings\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Requisites\n",
     "from gensim.models import TfidfModel\n",
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,15 +1046,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\Usuario\\Documents\\Universitat\\4rt Quatri\\PLH\\Practica4\\word-embeddings\\.venv\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n",
       "[{'label': 'SIMILARITY', 'score': 2.1183004307689126}, {'label': 'SIMILARITY', 'score': 2.179974932297432}, {'label': 'SIMILARITY', 'score': 0.9511617858568939}]\n"
      ]
     }
@@ -1096,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1122,13 +1111,6 @@
     }
    ],
    "source": [
-    "def prepare(sentence_pairs):\n",
-    "    sentence_pairs_prep = []\n",
-    "    for s1, s2 in sentence_pairs:\n",
-    "        sentence_pairs_prep.append(f\"{tokenizer.cls_token} {s1}{tokenizer.sep_token}{tokenizer.sep_token} {s2}{tokenizer.sep_token}\")\n",
-    "    return sentence_pairs_prep\n",
-    "\n",
-    "\n",
     "\n",
     "def compute_pearson(input, y):\n",
     "    # Obtener las predicciones del modelo para los datos de prueba. En este ejemplo vamos a utilizar el corpus de training.\n",
@@ -1218,6 +1200,134 @@
    ],
    "source": [
     "print(train_spearman, val_spearman, test_spearman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sentence_transformers\n",
+      "  Downloading sentence_transformers-3.0.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: transformers<5.0.0,>=4.34.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (4.41.2)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (4.66.4)\n",
+      "Requirement already satisfied: torch>=1.11.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (2.3.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (1.26.4)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (1.5.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (1.10.0)\n",
+      "Requirement already satisfied: huggingface-hub>=0.15.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (0.23.2)\n",
+      "Requirement already satisfied: Pillow in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (10.3.0)\n",
+      "Requirement already satisfied: filelock in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (3.14.0)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (2024.3.1)\n",
+      "Requirement already satisfied: packaging>=20.9 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (24.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (6.0.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (2.32.3)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (4.12.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (1.12.1)\n",
+      "Requirement already satisfied: networkx in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (3.3)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (3.1.4)\n",
+      "Requirement already satisfied: mkl<=2021.4.0,>=2021.1.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (2021.4.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from tqdm->sentence_transformers) (0.4.6)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from transformers<5.0.0,>=4.34.0->sentence_transformers) (2024.5.15)\n",
+      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from transformers<5.0.0,>=4.34.0->sentence_transformers) (0.19.1)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from transformers<5.0.0,>=4.34.0->sentence_transformers) (0.4.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from scikit-learn->sentence_transformers) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from scikit-learn->sentence_transformers) (3.5.0)\n",
+      "Requirement already satisfied: intel-openmp==2021.* in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from mkl<=2021.4.0,>=2021.1.1->torch>=1.11.0->sentence_transformers) (2021.4.0)\n",
+      "Requirement already satisfied: tbb==2021.* in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from mkl<=2021.4.0,>=2021.1.1->torch>=1.11.0->sentence_transformers) (2021.12.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from jinja2->torch>=1.11.0->sentence_transformers) (2.1.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (2.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (2024.2.2)\n",
+      "Requirement already satisfied: mpmath<1.4.0,>=1.1.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sympy->torch>=1.11.0->sentence_transformers) (1.3.0)\n",
+      "Downloading sentence_transformers-3.0.0-py3-none-any.whl (224 kB)\n",
+      "   ---------------------------------------- 0.0/224.7 kB ? eta -:--:--\n",
+      "   ----- --------------------------------- 30.7/224.7 kB 660.6 kB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 153.6/224.7 kB 1.3 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 215.0/224.7 kB 1.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 224.7/224.7 kB 1.4 MB/s eta 0:00:00\n",
+      "Installing collected packages: sentence_transformers\n",
+      "Successfully installed sentence_transformers-3.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sentence_transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.063855677843094, 2.236715853214264, 0.8875995874404907]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# Load the fine-tuned model and tokenizer\n",
+    "model_name = \"pauhidalgoo/finetuned-sts-roberta-base-ca-v2\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModel.from_pretrained(model_name)\n",
+    "\n",
+    "def get_embeddings(sentences):\n",
+    "    inputs = tokenizer(sentences, padding=True, truncation=True, return_tensors='pt')\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "    embeddings = outputs.last_hidden_state.mean(dim=1)  # Use mean pooling to get sentence embeddings\n",
+    "    return embeddings\n",
+    "\n",
+    "def calculate_similarity(sentence_pairs):\n",
+    "    similarities = []\n",
+    "    for s1, s2 in sentence_pairs:\n",
+    "        emb1 = get_embeddings([s1])\n",
+    "        emb2 = get_embeddings([s2])\n",
+    "        sim = cosine_similarity(emb1, emb2)[0][0]\n",
+    "        similarities.append(sim*5)\n",
+    "        \n",
+    "    return similarities\n",
+    "\n",
+    "# Example sentence pairs\n",
+    "sentence_pairs = [(\"El llibre va caure per la finestra.\", \"El llibre va sortir volant.\"),\n",
+    "                  (\"M'agrades.\", \"T'estimo.\"),\n",
+    "                  (\"M'agrada el sol i la calor\", \"A la Garrotxa plou molt.\")]\n",
+    "\n",
+    "# Calculate similarities\n",
+    "similarities = calculate_similarity(sentence_pairs)\n",
+    "print(similarities)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def compute_pearson(input, y):\n",
+    "    # Obtener las predicciones del modelo para los datos de prueba. En este ejemplo vamos a utilizar el corpus de training.\n",
+    "    predictions = calculate_similarity(input)\n",
+    "\n",
+    "\n",
+    "    y_pred = np.array(predictions)\n",
+    "    # Calcular la correlación de Pearson entre las predicciones y los datos de prueba\n",
+    "    correlation, _ = pearsonr(y_pred.flatten(), np.array(y).flatten())\n",
+    "    return correlation\n",
+    "\n",
+    "print(f\"Correlación de Pearson (baseline-test): {compute_pearson(input_pairs_test, y_test)}\")"
    ]
   }
  ],
