--- a/part2.ipynb
+++ b/part2.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text Similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -20,7 +41,15 @@
     "import spacy\n",
     "from gensim.models import KeyedVectors\n",
     "from gensim.models import word2vec\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from transformers import AutoTokenizer, AutoModel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load models"
    ]
   },
   {
@@ -53,8 +82,6 @@
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModel\n",
-    "\n",
     "roberta_tokenizer = AutoTokenizer.from_pretrained(\"projecte-aina/roberta-base-ca-v2\")\n",
     "roberta_model = AutoModel.from_pretrained('projecte-aina/roberta-base-ca-v2')\n",
     "roberta_model.eval()\n",
@@ -75,27 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfrom gensim.models import FastText\\nimport gensim\\n# No funciona de moment\\nmodel = gensim.models.fasttext.FastTextKeyedVectors.load('./models/fasttext/cc_ca_300.bin')\\n\""
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "from gensim.models import FastText\n",
     "import gensim\n",
     "# No funciona de moment\n",
     "model = gensim.models.fasttext.FastTextKeyedVectors.load('./models/fasttext/cc_ca_300.bin')\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "pass"
    ]
   },
   {
@@ -151,20 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nDoesn't work\\nfrom gensim.models import FastText\\nft_model = FastText.load('./models/fasttext/cc_ca_300.bin', mmap='r')\\n\""
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ft_model = fasttext.load_facebook_model('./models/fasttext/cc.ca.300.bin.gz')\n",
     "ft_model = ft_model.wv\n",
@@ -172,7 +178,8 @@
     "Doesn't work\n",
     "from gensim.models import FastText\n",
     "ft_model = FastText.load('./models/fasttext/cc_ca_300.bin', mmap='r')\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "pass"
    ]
   },
   {
@@ -191,6 +198,13 @@
    "outputs": [],
    "source": [
     "model_roberta = spacy.load(\"ca_core_news_trf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Execute all the models"
    ]
   },
   {
@@ -265,6 +279,13 @@
    "source": [
     "total_models = len(list_of_models)\n",
     "count = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Be careful, it takes more than 1 hour"
    ]
   },
   {
@@ -582,6 +603,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -658,7 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Single model tests"
+    "## Single model tests"
    ]
   },
   {
@@ -667,7 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importlib import reload\n"
+    "from importlib import reload"
    ]
   },
   {
@@ -685,81 +713,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at projecte-aina/roberta-base-ca-v2 and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at projecte-aina/roberta-base-ca-v2-cased-sts and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RobertaModel(\n",
-       "  (embeddings): RobertaEmbeddings(\n",
-       "    (word_embeddings): Embedding(50262, 768, padding_idx=1)\n",
-       "    (position_embeddings): Embedding(514, 768, padding_idx=1)\n",
-       "    (token_type_embeddings): Embedding(1, 768)\n",
-       "    (LayerNorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "    (dropout): Dropout(p=0.1, inplace=False)\n",
-       "  )\n",
-       "  (encoder): RobertaEncoder(\n",
-       "    (layer): ModuleList(\n",
-       "      (0-11): 12 x RobertaLayer(\n",
-       "        (attention): RobertaAttention(\n",
-       "          (self): RobertaSelfAttention(\n",
-       "            (query): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (key): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (value): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          )\n",
-       "          (output): RobertaSelfOutput(\n",
-       "            (dense): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (LayerNorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          )\n",
-       "        )\n",
-       "        (intermediate): RobertaIntermediate(\n",
-       "          (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (intermediate_act_fn): GELUActivation()\n",
-       "        )\n",
-       "        (output): RobertaOutput(\n",
-       "          (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (LayerNorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (pooler): RobertaPooler(\n",
-       "    (dense): Linear(in_features=768, out_features=768, bias=True)\n",
-       "    (activation): Tanh()\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModel\n",
     "\n",
@@ -770,7 +724,8 @@
     "model_finetuned = 'projecte-aina/roberta-base-ca-v2-cased-sts'\n",
     "tokenizer_finetuned = AutoTokenizer.from_pretrained(model_finetuned)\n",
     "model_finetuned = AutoModel.from_pretrained(model_finetuned)\n",
-    "model_finetuned.eval()"
+    "model_finetuned.eval()\n",
+    "pass"
    ]
   },
   {
@@ -779,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = textsim_class.TextSimilarity(model=roberta_model, dataset=dataset, mode=\"roberta-hugging\", pretrained=False, cls=True, remap=True, trainable=True, tokenizer = tokenizer_finetuned, dict_size=1000000, recalculate=\"roberta-hugging_mean_mapped_pairs\")"
+    "a = textsim_class.TextSimilarity(model=wv_model, dataset=dataset, mode=\"mean\", pretrained=False, cls=True, remap=True, trainable=True, tokenizer = tokenizer_finetuned, dict_size=1000000, recalculate=True)"
    ]
   },
   {
@@ -993,13 +948,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1203,61 +1151,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sentence_transformers\n",
-      "  Downloading sentence_transformers-3.0.0-py3-none-any.whl.metadata (10 kB)\n",
-      "Requirement already satisfied: transformers<5.0.0,>=4.34.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (4.41.2)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (4.66.4)\n",
-      "Requirement already satisfied: torch>=1.11.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (2.3.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (1.26.4)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (1.5.0)\n",
-      "Requirement already satisfied: scipy in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (1.10.0)\n",
-      "Requirement already satisfied: huggingface-hub>=0.15.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (0.23.2)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sentence_transformers) (10.3.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (3.14.0)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (2024.3.1)\n",
-      "Requirement already satisfied: packaging>=20.9 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (24.0)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (6.0.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (2.32.3)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from huggingface-hub>=0.15.1->sentence_transformers) (4.12.0)\n",
-      "Requirement already satisfied: sympy in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (1.12.1)\n",
-      "Requirement already satisfied: networkx in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (3.3)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (3.1.4)\n",
-      "Requirement already satisfied: mkl<=2021.4.0,>=2021.1.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from torch>=1.11.0->sentence_transformers) (2021.4.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from tqdm->sentence_transformers) (0.4.6)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from transformers<5.0.0,>=4.34.0->sentence_transformers) (2024.5.15)\n",
-      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from transformers<5.0.0,>=4.34.0->sentence_transformers) (0.19.1)\n",
-      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from transformers<5.0.0,>=4.34.0->sentence_transformers) (0.4.3)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from scikit-learn->sentence_transformers) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from scikit-learn->sentence_transformers) (3.5.0)\n",
-      "Requirement already satisfied: intel-openmp==2021.* in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from mkl<=2021.4.0,>=2021.1.1->torch>=1.11.0->sentence_transformers) (2021.4.0)\n",
-      "Requirement already satisfied: tbb==2021.* in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from mkl<=2021.4.0,>=2021.1.1->torch>=1.11.0->sentence_transformers) (2021.12.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from jinja2->torch>=1.11.0->sentence_transformers) (2.1.5)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (2.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (2.2.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from requests->huggingface-hub>=0.15.1->sentence_transformers) (2024.2.2)\n",
-      "Requirement already satisfied: mpmath<1.4.0,>=1.1.0 in c:\\users\\usuario\\documents\\universitat\\4rt quatri\\plh\\practica4\\word-embeddings\\.venv\\lib\\site-packages (from sympy->torch>=1.11.0->sentence_transformers) (1.3.0)\n",
-      "Downloading sentence_transformers-3.0.0-py3-none-any.whl (224 kB)\n",
-      "   ---------------------------------------- 0.0/224.7 kB ? eta -:--:--\n",
-      "   ----- --------------------------------- 30.7/224.7 kB 660.6 kB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 153.6/224.7 kB 1.3 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 215.0/224.7 kB 1.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 224.7/224.7 kB 1.4 MB/s eta 0:00:00\n",
-      "Installing collected packages: sentence_transformers\n",
-      "Successfully installed sentence_transformers-3.0.0\n"
-     ]
-    }
-   ],
    "source": [
-    "!pip install sentence_transformers"
+    "## Our own finetuned"
    ]
   },
   {
@@ -1312,9 +1209,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlación de Pearson (baseline-test): 0.742854611886582\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def compute_pearson(input, y):\n",
+    "    # Obtener las predicciones del modelo para los datos de prueba. En este ejemplo vamos a utilizar el corpus de training.\n",
+    "    predictions = calculate_similarity(input)\n",
+    "\n",
+    "\n",
+    "    y_pred = np.array(predictions)\n",
+    "    # Calcular la correlación de Pearson entre las predicciones y los datos de prueba\n",
+    "    correlation, _ = pearsonr(y_pred.flatten(), np.array(y).flatten())\n",
+    "    return correlation\n",
+    "\n",
+    "print(f\"Correlación de Pearson (baseline-test): {compute_pearson(input_pairs_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilitzant el CLS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def get_embeddings(sentences):\n",
+    "    inputs = tokenizer(sentences, padding=True, truncation=True, return_tensors='pt')\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "    embeddings = outputs.last_hidden_state[:, 0, :]  # Use mean pooling to get sentence embeddings\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlación de Pearson (baseline-test): 0.7146615222274435\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def compute_pearson(input, y):\n",
